Giraph Change Log

Release 0.2.0 - unreleased
  GIRAPH-395: No need to make HashWorkerPartitioner thread-safe. (aching)

  GIRAPH-441: Keep track of connected channels in NettyServer (majakabiljo)

  GIRAPH-440: ProgressableUtils - TimeoutException from future.get shouldn't 
  be rethrown (majakabiljo)

  GIRAPH-438: When checkpointing is disable, fast fail (aching)

  GIRAPH-437: Missing progress calls when stopping Netty server (majakabiljo)

  GIRAPH-439: Fix naming of input superstep counter (apresta)

  GIRAPH-424: Fix hashCode modulo computation (majakabiljo)

  GIRAPH-396: HcatalogVertexInputFormat outputs a bit too often. (aching)

  GIRAPH-435: Serialize server messages for memory and less GC. (aching)

  GIRAPH-420: build formats in profiles where it works. (nitay)

  GIRAPH-421: Aggregate metrics up to master. (nitay)

  GIRAPH-434: Remove unused InputSplitPathOrganizer from BspServiceWorker (apresta via ereisman)

  GIRAPH-405: Edge-based input from HCatalog (apresta)

  GIRAPH-433: Vertex#initialize() shouldn't be called with null edges (apresta)

  GIRAPH-416: MasterObserver for user post-application customization (nitay)

  GIRAPH-427: Add committer information for Nitay Joffe to pom.xml (nitay)

  GIRAPH-417: Serialize the graph/message cache into byte[] for
  improving memory usage and compute speed. (aching)

  GIRAPH-386: ClassCastException when giraph.SplitMasterWorker=false
  (majakabiljo)

  GIRAPH-423: Allow overriding addEdge (apresta)

  GIRAPH-422: Setting the log level of the root logger to the same level
  can cause issues in Hadoop. (aching)

  GIRAPH-415: Refactor / cleanup Hadoop Counters (nitay via majakabiljo)

  GIRAPH-413: Make building Facebook profile easier. (nitay via aching)

  GIRAPH-407: Metrics Update (nitay via apresta)

  GIRAPH-404: More SendMessageCache improvements (majakabiljo)

  GIRAPH-412: Checkstyle error from Giraph-403 (majakabiljo) 

  GIRAPH-403: GraphMapper.notiftySentMessages need to be thread-safe 